worker/tests/ui/fetch-wrong-argument-types.stderr
error[E0277]: the trait bound `std::string::String: FromRequest` is not satisfied
 --> tests/ui/fetch-wrong-argument-types.rs:3:1
  |
3 | #[event(fetch)]
  | ^^^^^^^^^^^^^^^ the trait `FromRequest` is not implemented for `std::string::String`
  |
  = help: the following other types implement trait `FromRequest`:
            worker::Request
            worker::web_sys::Request
  = note: this error originates in the attribute macro `event` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: arguments to this function are incorrect
 --> tests/ui/fetch-wrong-argument-types.rs:4:10
  |
3 | #[event(fetch)]
  | ---------------
  | |
  | expected `String`, found `Env`
  | expected `String`, found `Context`
4 | async fn fetch(_a: String, _b: String, _c: String) -> Result<worker::Response, worker::Error> {
  |          ^^^^^
  |
note: function defined here
 --> tests/ui/fetch-wrong-argument-types.rs:4:10
  |
4 | async fn fetch(_a: String, _b: String, _c: String) -> Result<worker::Response, worker::Error> {
  |          ^^^^^             ----------  ----------
